--- a/index.html
+++ b/index.html
@@ -1,1 +1,30 @@
-<h1>hiii<h1/>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<meta charset="UTF-8">
+<title>Live Screen</title>
+<style>
+  body, html {
+    margin: 0;
+    padding: 0;
+    background: black;
+    height: 100%;
+    width: 100%;
+  }
+  iframe {
+    border: none;
+    width: 100%;
+    height: 100%;
+  }
+</style>
+</head>
+<body>
+
+<iframe 
+  src="https://vdo.ninja/?view=wdr2tzV&hidechat=1&hidetitle=1&hidemenu=1&autoplay=1" 
+  allow="display-capture"
+  sandbox="allow-scripts allow-same-origin"
+></iframe>
+
+</body>
+</html>
